# sdkwork-aiot

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: ci.yml  package.yml
apis/: README.md
apis/app-api/: README.md
apis/backend-api/: README.md
apps/: README.md
configs/: README.md
crates/: README.md
crates/sdkwork-aiot-adapter-xiaozhi/: Cargo.toml  README.md
crates/sdkwork-aiot-adapter-xiaozhi/specs/: README.md  component.spec.json
crates/sdkwork-aiot-adapter-xiaozhi/src/: lib.rs  opus_codec.rs  opus_uplink.rs  provider_downlink.rs
crates/sdkwork-aiot-adapter-xiaozhi/tests/: xiaozhi_standard.rs
crates/sdkwork-aiot-architecture/: Cargo.toml  README.md
crates/sdkwork-aiot-architecture/specs/: README.md  component.spec.json
crates/sdkwork-aiot-architecture/src/: lib.rs
crates/sdkwork-aiot-architecture/tests/: architecture_standard.rs  device_edge_pipeline_integration.rs  gateway_pipeline_integration.rs
crates/sdkwork-aiot-device-edge-runtime/: Cargo.toml  README.md
crates/sdkwork-aiot-device-edge-runtime/specs/: README.md  component.spec.json
crates/sdkwork-aiot-device-edge-runtime/src/: command_delivery_worker.rs  lib.rs  main.rs  mqtt_bridge_readiness.rs
crates/sdkwork-aiot-device-edge-runtime/tests/: device_edge_runtime_standard.rs
crates/sdkwork-aiot-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-aiot-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-aiot-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-aiot-http-api/: Cargo.toml  README.md
crates/sdkwork-aiot-http-api/specs/: README.md  component.spec.json
crates/sdkwork-aiot-http-api/src/: lib.rs  sqlite_admin.rs
crates/sdkwork-aiot-http-api/tests/: http_api_standard.rs
crates/sdkwork-aiot-intelligence-bridge/: Cargo.toml
crates/sdkwork-aiot-intelligence-bridge/src/: claw_router.rs  config.rs  kernel_runtime.rs  lib.rs  mcp.rs  session_map.rs  speech.rs
crates/sdkwork-aiot-runtime/: Cargo.toml  README.md
crates/sdkwork-aiot-runtime/specs/: README.md  component.spec.json
crates/sdkwork-aiot-runtime/src/: lib.rs
crates/sdkwork-aiot-runtime/tests/: runtime_standard.rs
crates/sdkwork-aiot-service-host/: Cargo.toml  README.md
crates/sdkwork-aiot-service-host/specs/: README.md  component.spec.json
crates/sdkwork-aiot-service-host/src/: lib.rs  outbox_dispatcher.rs
crates/sdkwork-aiot-service-host/tests/: runtime_standard.rs
crates/sdkwork-aiot-storage-sqlx/: Cargo.toml  README.md
crates/sdkwork-aiot-storage-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-aiot-storage-sqlx/src/: blocking_device_pool.rs  credential.rs  credential_hash.rs  database_bootstrap.rs  device_database.rs  device_repository_sqlite.rs  dialect_sql.rs  firmware_ota_catalog.rs  framework_bootstrap.rs  lib.rs  outbox.rs  outbox_worker.rs  persisted_entity.rs  postgres_sync.rs  row_decode.rs  row_id_allocator.rs  runtime_bridge.rs  schema.rs  sqlite_sync.rs  test_env.rs
crates/sdkwork-aiot-storage-sqlx/tests/: storage_sqlx_standard.rs
crates/sdkwork-aiot-transport/: Cargo.toml  README.md
crates/sdkwork-aiot-transport/specs/: README.md  component.spec.json
crates/sdkwork-aiot-transport/src/: lib.rs
crates/sdkwork-aiot-transport/tests/: transport_standard.rs
crates/sdkwork-api-aiot-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-aiot-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-aiot-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-iot-platform-service/: Cargo.toml  README.md
crates/sdkwork-iot-platform-service/specs/: README.md  component.spec.json
crates/sdkwork-iot-platform-service/src/: api_response.rs  firmware_rollout_planner.rs  lib.rs  pagination.rs  service_stores.rs  sqlite_admin.rs
crates/sdkwork-iot-platform-service/tests/: http_api_standard.rs
crates/sdkwork-router-iot-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-iot-backend-api/src/: http_adapter.rs  lib.rs  routes.rs
database/: README.md  database.manifest.json
deployments/: README.md  deploy.yaml
docs/: INDEX.yaml  README.md  external-reference-selection.md  production-readiness.md  topology-standard.md  xiaozhi-protocol-parity-matrix.md
etc/: README.md  sdkwork.deployment.config.json
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  aiot-dev.mjs  dev-with-simulator.mjs  gateway-package.mjs  release-package.mjs  release-preflight.mjs  release-publish.mjs  sbom-check.mjs  sbom-generate.mjs  strip-openapi-context-headers.mjs
sdks/: README.md
services/: README.md
services/sdkwork-aiot-admin-api/: Cargo.toml  README.md
services/sdkwork-aiot-admin-api/specs/: README.md  component.spec.json
services/sdkwork-aiot-admin-api/src/: main.rs
services/sdkwork-aiot-app-api/: Cargo.toml  README.md
services/sdkwork-aiot-app-api/specs/: README.md  component.spec.json
services/sdkwork-aiot-app-api/src/: main.rs
services/sdkwork-aiot-cloud-gateway/: Cargo.toml  README.md
services/sdkwork-aiot-cloud-gateway/specs/: README.md  component.spec.json
services/sdkwork-aiot-cloud-gateway/src/: active_ws_sessions.rs  command_delivery_worker.rs  lib.rs  main.rs  mqtt_bridge_readiness.rs  xiaozhi_ws_media_session.rs
services/sdkwork-aiot-cloud-gateway/tests/: gateway_standard.rs
services/sdkwork-aiot-gateway/: Cargo.toml  README.md
services/sdkwork-aiot-gateway/specs/: README.md  component.spec.json
services/sdkwork-aiot-gateway/src/: lib.rs  main.rs
services/sdkwork-aiot-gateway/tests/: gateway_standard.rs
services/sdkwork-aiot-standalone-gateway/: Cargo.toml
services/sdkwork-aiot-standalone-gateway/src/: main.rs
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md  aiot-workspace-standard.test.mjs
tools/: README.md  aiot_sdk_generate.mjs  fix-http-api-test-pointers.mjs  run-sdkgen.mjs
(+256 files in other folders)
