[workspace]
members = [
    "crates/sdkwork-aiot-contract",
    "crates/sdkwork-aiot-core",
    "crates/sdkwork-aiot-protocol",
    "crates/sdkwork-aiot-runtime",
    "crates/sdkwork-aiot-storage",
    "crates/sdkwork-aiot-storage-sqlx",
    "crates/sdkwork-aiot-security",
    "crates/sdkwork-aiot-observability",
    "crates/sdkwork-aiot-adapter-xiaozhi",
    "crates/sdkwork-aiot-transport",
    "crates/sdkwork-aiot-app-context",
    "crates/sdkwork-aiot-http-api",
    "crates/sdkwork-router-iot-app-api",
    "crates/sdkwork-router-iot-backend-api",
    "crates/sdkwork-aiot-architecture",
    "services/sdkwork-aiot-gateway",
    "services/sdkwork-aiot-xiaozhi-simulator-ui",
    "services/sdkwork-aiot-admin-api",
    "services/sdkwork-aiot-app-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.8"
http-body-util = "0.1.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }

# SDKWork workspace members - declared once at workspace root
sdkwork-aiot-contract = { path = "crates/sdkwork-aiot-contract" }
sdkwork-aiot-core = { path = "crates/sdkwork-aiot-core" }
sdkwork-aiot-protocol = { path = "crates/sdkwork-aiot-protocol" }
sdkwork-aiot-runtime = { path = "crates/sdkwork-aiot-runtime" }
sdkwork-aiot-storage = { path = "crates/sdkwork-aiot-storage" }
sdkwork-aiot-storage-sqlx = { path = "crates/sdkwork-aiot-storage-sqlx" }
sdkwork-aiot-security = { path = "crates/sdkwork-aiot-security" }
sdkwork-aiot-observability = { path = "crates/sdkwork-aiot-observability" }
sdkwork-aiot-adapter-xiaozhi = { path = "crates/sdkwork-aiot-adapter-xiaozhi" }
sdkwork-aiot-transport = { path = "crates/sdkwork-aiot-transport" }
sdkwork-aiot-app-context = { path = "crates/sdkwork-aiot-app-context" }
sdkwork-aiot-http-api = { path = "crates/sdkwork-aiot-http-api" }
sdkwork-router-iot-app-api = { path = "crates/sdkwork-router-iot-app-api" }
sdkwork-router-iot-backend-api = { path = "crates/sdkwork-router-iot-backend-api" }
sdkwork-aiot-architecture = { path = "crates/sdkwork-aiot-architecture" }

sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-iam-web-adapter = { path = "../sdkwork-appbase/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
