[workspace]
members = [
    "crates/sdkwork-api-aiot-standalone-gateway",
    "crates/sdkwork-api-aiot-assembly",
    "crates/sdkwork-aiot-contract",
    "crates/sdkwork-iot-device-service",
    "crates/sdkwork-aiot-protocol",
    "crates/sdkwork-aiot-service-host",
    "crates/sdkwork-aiot-storage",
    "crates/sdkwork-aiot-storage-sqlx",
    "crates/sdkwork-aiot-database-host",
    "crates/sdkwork-aiot-security",
    "crates/sdkwork-aiot-observability",
    "crates/sdkwork-aiot-adapter-xiaozhi",
    "crates/sdkwork-aiot-transport",
    "crates/sdkwork-aiot-app-context",
    "crates/sdkwork-iot-platform-service",
    "crates/sdkwork-routes-iot-app-api",
    "crates/sdkwork-routes-iot-backend-api",
    "crates/sdkwork-aiot-architecture",
    "crates/sdkwork-aiot-intelligence-bridge",
    "crates/sdkwork-api-aiot-assembly",
    "services/sdkwork-aiot-cloud-gateway",
    "services/sdkwork-aiot-standalone-gateway",
    "services/sdkwork-aiot-xiaozhi-simulator-ui",
    "services/sdkwork-aiot-admin-api",
    "services/sdkwork-aiot-app-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.8"
http-body-util = "0.1.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# SDKWork workspace members - declared once at workspace root
sdkwork-aiot-contract = { path = "crates/sdkwork-aiot-contract" }
sdkwork-iot-device-service = { path = "crates/sdkwork-iot-device-service" }
sdkwork-aiot-protocol = { path = "crates/sdkwork-aiot-protocol" }
sdkwork-aiot-service-host = { path = "crates/sdkwork-aiot-service-host" }
sdkwork-aiot-storage = { path = "crates/sdkwork-aiot-storage" }
sdkwork-aiot-storage-sqlx = { path = "crates/sdkwork-aiot-storage-sqlx" }
sdkwork-aiot-security = { path = "crates/sdkwork-aiot-security" }
sdkwork-aiot-observability = { path = "crates/sdkwork-aiot-observability" }
sdkwork-aiot-adapter-xiaozhi = { path = "crates/sdkwork-aiot-adapter-xiaozhi" }
sdkwork-aiot-transport = { path = "crates/sdkwork-aiot-transport" }
sdkwork-aiot-app-context = { path = "crates/sdkwork-aiot-app-context" }
sdkwork-iot-platform-service = { path = "crates/sdkwork-iot-platform-service" }
sdkwork-routes-iot-app-api = { path = "crates/sdkwork-routes-iot-app-api" }
sdkwork-routes-iot-backend-api = { path = "crates/sdkwork-routes-iot-backend-api" }
sdkwork-aiot-architecture = { path = "crates/sdkwork-aiot-architecture" }
sdkwork-aiot-intelligence-bridge = { path = "crates/sdkwork-aiot-intelligence-bridge" }
sdkwork-api-aiot-assembly = { path = "crates/sdkwork-api-aiot-assembly" }
clawrouter-open-sdk = { path = "../sdkwork-clawrouter/sdks/clawrouter-open-sdk/clawrouter-open-sdk-rust/generated/server-openapi" }

sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-aiot-database-host = { path = "crates/sdkwork-aiot-database-host" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
