[package]
name = "sdkwork-aiot-adapter-xiaozhi"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-protocol = { path = "../sdkwork-aiot-protocol" }
sdkwork-aiot-security = { path = "../sdkwork-aiot-security" }

[dev-dependencies]
sdkwork-aiot-runtime = { path = "../sdkwork-aiot-runtime" }
