[package]
name = "sdkwork-aiot-adapter-xiaozhi"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-security.workspace = true
aes = "0.8"
ctr = "0.9"

[dev-dependencies]
sdkwork-aiot-service-host.workspace = true
