[package]
name = "sdkwork-aiot-architecture"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
sdkwork-aiot-adapter-xiaozhi.workspace = true
sdkwork-aiot-contract.workspace = true
sdkwork-aiot-http-api.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-runtime.workspace = true
sdkwork-aiot-storage.workspace = true
sdkwork-aiot-transport.workspace = true
