[package]
name = "sdkwork-aiot-architecture"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
serde_json = "1"
sdkwork-aiot-adapter-xiaozhi.workspace = true
sdkwork-aiot-contract.workspace = true
sdkwork-iot-platform-service.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-service-host.workspace = true
sdkwork-aiot-storage.workspace = true
sdkwork-aiot-transport.workspace = true
