[package]
name = "sdkwork-aiot-gateway-assembly"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generated gateway assembly for sdkwork-aiot application HTTP plane."

[lib]
name = "sdkwork_aiot_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { workspace = true }
sdkwork_routes_iot_app_api = { package = "sdkwork-routes-iot-app-api", path = "../sdkwork-routes-iot-app-api" }
sdkwork_routes_iot_backend_api = { package = "sdkwork-routes-iot-backend-api", path = "../sdkwork-routes-iot-backend-api" }
sdkwork-iot-platform-service = { workspace = true }
