[package]
name = "sdkwork-aiot-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-aiot application HTTP plane."

[lib]
name = "sdkwork_aiot_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-iot-platform-service = { workspace = true }
sdkwork-routes-iot-app-api.workspace = true
sdkwork-routes-iot-backend-api.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
