[package]
name = "sdkwork-aiot-http-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde_json = "1"
sdkwork-aiot-contract.workspace = true
sdkwork-aiot-core.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-runtime.workspace = true
sdkwork-aiot-storage.workspace = true
sdkwork-aiot-transport.workspace = true

[dev-dependencies]
sdkwork-aiot-storage-sqlx.workspace = true
