[package]
name = "sdkwork-aiot-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-contract.workspace = true
sdkwork-aiot-core.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-security.workspace = true
sdkwork-aiot-storage.workspace = true
sha2 = "0.10"
