[package]
name = "sdkwork-aiot-storage-sqlx"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-database-host = { path = "../sdkwork-aiot-database-host" }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = "1"
sdkwork-aiot-storage.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
