[package]
name = "sdkwork-aiot-storage-sqlx"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sqlx = { workspace = true, features = ["postgres", "chrono"] }
chrono = "0.4"
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = "1"
sdkwork-aiot-storage.workspace = true
sdkwork-aiot-service-host.workspace = true
sdkwork-utils-rust.workspace = true
rand_core.workspace = true

[dev-dependencies]
sdkwork-aiot-service-host.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
