[package]
name = "sdkwork-aiot-transport"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-contract.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-runtime.workspace = true

[dev-dependencies]
sdkwork-aiot-storage.workspace = true
