[package]
name = "sdkwork-api-aiot-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-aiot application HTTP plane."

[lib]
name = "sdkwork_api_aiot_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-iot-platform-service = { workspace = true }
sdkwork-routes-iot-app-api.workspace = true
sdkwork-routes-iot-backend-api.workspace = true
