[package]
name = "sdkwork-iot-platform-service"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde_json = "1"
sdkwork-aiot-app-context.workspace = true
sdkwork-aiot-contract.workspace = true
sdkwork-web-core.workspace = true
sdkwork-iot-device-service.workspace = true
sdkwork-aiot-observability.workspace = true
sdkwork-aiot-protocol.workspace = true
sdkwork-aiot-service-host.workspace = true
sdkwork-aiot-storage.workspace = true
sdkwork-aiot-storage-sqlx.workspace = true
sdkwork-aiot-transport.workspace = true

[dev-dependencies]
sdkwork-aiot-storage-sqlx.workspace = true
