[package]
name = "sdkwork-aiot-admin-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-http-api.workspace = true
sdkwork-aiot-runtime.workspace = true
sdkwork-aiot-storage-sqlx.workspace = true
sdkwork-router-iot-backend-api.workspace = true
tokio.workspace = true
