[package]
name = "sdkwork-aiot-cloud-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-service-host = { path = "../../crates/sdkwork-aiot-service-host" }
sdkwork-aiot-observability = { path = "../../crates/sdkwork-aiot-observability" }
sdkwork-aiot-adapter-xiaozhi = { path = "../../crates/sdkwork-aiot-adapter-xiaozhi" }
sdkwork-aiot-protocol = { path = "../../crates/sdkwork-aiot-protocol" }
sdkwork-aiot-storage = { path = "../../crates/sdkwork-aiot-storage" }
sdkwork-aiot-storage-sqlx = { path = "../../crates/sdkwork-aiot-storage-sqlx" }
sdkwork-aiot-transport = { path = "../../crates/sdkwork-aiot-transport" }
sdkwork-aiot-intelligence-bridge = { path = "../../crates/sdkwork-aiot-intelligence-bridge" }
sdkwork-utils-rust.workspace = true
rumqttc = "0.24"
ctrlc = "=3.4.5"
sqlx.workspace = true
redis = "0.28"

[dev-dependencies]
sdkwork-aiot-storage = { path = "../../crates/sdkwork-aiot-storage" }
