[package]
name = "sdkwork-aiot-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sdkwork-aiot-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
sdkwork-api-aiot-assembly.workspace = true
tokio.workspace = true
